# tauri-plugin-libsql

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  README.md  README.zh-CN.md  SKILL.md  blog-post.md  package.json  pnpm-lock.yaml  rollup.config.js  tsconfig.json
.github/workflows/: publish.yml
.journal/: 2026-02-25.md  2026-06-25.md
.repowiki/en/content/: Getting Started Guide.md  System Overview.md  Technology Stack.md
.repowiki/en/content/Architecture/: Architecture.md
.repowiki/en/content/Backend/: Backend Services.md
.repowiki/en/content/Frontend/: Frontend Application.md
examples/tauri-app/: package.json
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml
examples/todo-list/: README.md  README.zh-CN.md  package.json
examples/todo-list/src/: App.svelte  app.css
examples/todo-list/src-tauri/: Cargo.toml  tauri.conf.json
examples/todo-list/src-tauri/src/: lib.rs
examples/todo-list/src/lib/: TodoList.svelte  db.ts
guest-js/: AGENTS.md  drizzle.ts  index.ts  migrate.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/schemas/: schema.json
src/: AGENTS.md  commands.rs  decode.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs  wrapper.rs
test/: migrate.test.ts  tsconfig.json
