[package]
name = "tauri-plugin-libsql"
version = "0.1.0"
authors = ["Huakun"]
description = "Tauri plugin for libsql with encryption and drizzle ORM support"
edition = "2021"
license = "MIT"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-libsql"

[dependencies]
tauri = { version = "2.10.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
indexmap = { version = "2", features = ["serde"] }
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread"] }
futures = "0.3"
libsql = { path = "vendors/libsql/libsql", default-features = false, features = ["core"] }
bytes = { version = "1", optional = true }

[build-dependencies]
tauri-plugin = { version = "2.5.3", features = ["build"] }

[features]
default = ["core", "encryption"]
core = ["libsql/core"]
encryption = ["libsql/encryption", "dep:bytes"]
replication = ["libsql/replication", "libsql/sync", "libsql/tls"]
remote = ["libsql/remote", "libsql/tls"]
